[package]
name = "kafka-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
rdkafka = { version = "0.28.0", features = ["ssl", "sasl"] }
sasl2-sys = { version = "0.1.19", features = ["vendored"] }
tokio = { version = "1.18.4", features = ["full"] }
